--- a/covered.html
+++ b/covered.html
@@ -4,13 +4,17 @@
     <title>Covered Bonds Investor Presentation</title>
 </head>
 <body>
-    <h1>Protected Content</h1>
-    <p>This content is protected. Please enter the password to continue.</p>
+    <h1>Covered Bonds Investor Presentation</h1>
+    <div>
+        <img src="Órgano de control/Automatización - Python/Abanca (Auto)/Logos/logo-social.jpg"
+        <img src="logo.png" alt="Logo">
+        <p>Protected Content. Please enter the password to continue.</p>
+    </div>
     <input type="password" id="passwordInput" placeholder="Enter Password">
     <button onclick="checkPassword()">Enter</button>
     <div id="iframeContainer" style="display: none;">
         <h2>Abanca Corporativo Completo Quarter</h2>
-        <iframe title="Abanca Corporativo Completo Quarter"
+        <iframe title="Cover Pool Information"
                 width="100%"
                 height="500px"
                 src="https://app.powerbi.com/reportEmbed?reportId=81ee266a-2799-4577-bba8-8f96aa531bdf&autoAuth=true&ctid=2788b953-1971-4b82-9986-b668acbd5846"
