--- a/covered.html
+++ b/covered.html
@@ -6,7 +6,7 @@
 <body>
     <h1>Covered Bonds Investor Presentation</h1>
     <div>
-        <img src="Órgano de control/Automatización - Python/Abanca (Auto)/Logos/logo-social.jpg"
+        <img src="Órgano de control/Automatización - Python/Abanca (Auto)/Logos/logo-social.jpg">
         <p>Protected Content. Please enter the password to continue.</p>
     </div>
     <input type="password" id="passwordInput" placeholder="Enter Password">
