--- a/covered.html
+++ b/covered.html
@@ -6,7 +6,7 @@
 <body>
     <h1>Covered Bonds Investor Presentation</h1>
     <div>
-        <img src="Órgano de control/Automatización - Python/Abanca (Auto)/Logos/logo-social.jpg">
+        <img src="https://play-lh.googleusercontent.com/p8n-LjuwErRjEWDJh53wEwL_jDccfmDMXB547j_qifRJ_VWf0ofZ33l7sOMvxZtO0w=w600-h300-pc0xffffff-pd">
         <p>Protected Content. Please enter the password to continue.</p>
     </div>
     <input type="password" id="passwordInput" placeholder="Enter Password">
