--- a/covered.html
+++ b/covered.html
@@ -2,11 +2,31 @@
 <html>
 <head>
     <title>Covered Bonds Investor Presentation</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+        .header {
+            display: flex;
+            align-items: center;
+        }
+        .header img {
+            width: 50px; /* Ajusta el ancho de la imagen según tus preferencias */
+            height: auto;
+            margin-right: 10px; /* Espacio entre la imagen y el texto */
+        }
+        .header h1 {
+            font-size: 24px; /* Ajusta el tamaño del título según tus preferencias */
+            margin: 0; /* Elimina el margen predeterminado del título */
+        }
+    </style>
 </head>
 <body>
-    <h1>Covered Bonds Investor Presentation</h1>
-    <div>
+    <div class="header">
         <img src="https://play-lh.googleusercontent.com/p8n-LjuwErRjEWDJh53wEwL_jDccfmDMXB547j_qifRJ_VWf0ofZ33l7sOMvxZtO0w=w600-h300-pc0xffffff-pd">
+        <h1>Covered Bonds Investor Presentation</h1>
+    </div>
+    <div>
         <p>Protected Content. Please enter the password to continue.</p>
     </div>
     <input type="password" id="passwordInput" placeholder="Enter Password">
@@ -35,3 +55,4 @@
     </script>
 </body>
 </html>
+
