--- a/covered.html
+++ b/covered.html
@@ -5,6 +5,13 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
+            padding: 0;
+            flex-direction: column;
         }
         .header {
             display: flex;
@@ -55,4 +62,3 @@
     </script>
 </body>
 </html>
-
