--- a/covered.html
+++ b/covered.html
@@ -12,6 +12,8 @@
             margin: 0;
             padding: 0;
             flex-direction: column;
+            transform: scale(2); /* Aumentar el tamaño al doble */
+            transform-origin: center; /* Centrar el punto de transformación */
         }
         .header {
             display: flex;
@@ -62,4 +64,3 @@
     </script>
 </body>
 </html>
-
