--- a/covered.html
+++ b/covered.html
@@ -38,8 +38,7 @@
     <div>
         <p>Protected Content. Please enter the password to continue.</p>
     </div>
-    <input type="password" id="passwordInput" placeholder="Enter Password">
-    <button onclick="checkPassword()">Enter</button>
+    <input type="password" id="passwordInput" placeholder="Enter Password"><button onclick="checkPassword()">Enter</button>
     <div id="iframeContainer" style="display: none;">
         <h2>Abanca Corporativo Completo Quarter</h2>
         <iframe title="Cover Pool Information"
