--- a/covered.html
+++ b/covered.html
@@ -35,6 +35,9 @@
             width: 100%; /* Ajustar el ancho del iframe al 100% del contenedor */
             height: calc(100vh - 50px); /* Ajustar la altura para que ocupe toda la pantalla excepto la altura de la imagen del header */
         }
+        #iframeContainer h2 {
+            margin-left: 20px; /* Ajustar el margen izquierdo para separar del lado izquierdo de la pantalla */
+        }
     </style>
 </head>
 <body>
@@ -67,3 +70,4 @@
     </script>
 </body>
 </html>
+
