--- a/covered.html
+++ b/covered.html
@@ -52,12 +52,12 @@
         <img src="https://play-lh.googleusercontent.com/p8n-LjuwErRjEWDJh53wEwL_jDccfmDMXB547j_qifRJ_VWf0ofZ33l7sOMvxZtO0w=w600-h300-pc0xffffff-pd">
         <h1>Covered Bonds Investor Presentation</h1>
     </div>
-    <div>
+    <div id="passwordPrompt">
         <p>Protected Content. Please enter the password to continue.</p>
-    </div>
-    <div class="password-container">
-        <input type="password" id="passwordInput" placeholder="Enter Password">
-        <button onclick="checkPassword()">Enter</button>
+        <div class="password-container">
+            <input type="password" id="passwordInput" placeholder="Enter Password">
+            <button onclick="checkPassword()">Enter</button>
+        </div>
     </div>
     <div id="iframeContainer" style="display: none;">
         <h2>Abanca Corporativo Completo Quarter</h2>
@@ -72,6 +72,7 @@
         function checkPassword() {
             var password = document.getElementById("passwordInput").value;
             if (password === "Beka") {
+                document.getElementById("passwordPrompt").style.display = "none";
                 document.getElementById("iframeContainer").style.display = "block";
             } else {
                 alert("Incorrect password. Please try again.");
