--- a/covered.html
+++ b/covered.html
@@ -40,11 +40,13 @@
         }
         .password-container {
             display: flex;
+            flex-direction: column;
             align-items: center;
             margin-top: 10px; /* Ajustar el margen superior para centrar el contenedor */
         }
         .password-container input {
-            margin-right: 10px;
+            margin: 5px; /* Ajustar el margen del campo de entrada */
+            width: 200px; /* Ajustar el ancho del campo de entrada */
         }
     </style>
 </head>
