--- a/covered.html
+++ b/covered.html
@@ -18,6 +18,8 @@
         .header {
             display: flex;
             align-items: center;
+            background-color: #f2f2f2; /* Color de fondo gris claro */
+            padding: 10px; /* Espacio alrededor del contenido */
         }
         .header img {
             width: 50px; /* Ajusta el ancho de la imagen según tus preferencias */
@@ -91,3 +93,4 @@
     </script>
 </body>
 </html>
+
