--- a/covered.html
+++ b/covered.html
@@ -20,6 +20,7 @@
             align-items: center;
             background-color: #f2f2f2; /* Color de fondo gris claro */
             padding: 10px; /* Espacio alrededor del contenido */
+            width: 100%; /* Ocupar todo el ancho disponible */
         }
         .header img {
             width: 50px; /* Ajusta el ancho de la imagen según tus preferencias */
@@ -93,4 +94,3 @@
     </script>
 </body>
 </html>
-
