--- a/covered.html
+++ b/covered.html
@@ -49,7 +49,10 @@
         }
         .password-container input {
             margin: 5px; /* Ajustar el margen del campo de entrada */
+            padding-left: 30px; /* Agregar un espaciado a la izquierda para mostrar la imagen del logo dentro del campo */
             width: 200px; /* Ajustar el ancho del campo de entrada */
+            background: url('logo.jpg') no-repeat left center; /* Agregar la imagen del logo como fondo del campo de entrada */
+            background-size: 20px; /* Ajustar el tamaño de la imagen del logo */
         }
     </style>
 </head>
