--- a/covered.html
+++ b/covered.html
@@ -18,6 +18,7 @@
         .header {
             display: flex;
             align-items: center;
+            justify-content: center;
             background-color: #f2f2f2; /* Color de fondo gris claro */
             padding: 10px; /* Espacio alrededor del contenido */
             width: 100%; /* Ocupar todo el ancho disponible */
