--- a/covered.html
+++ b/covered.html
@@ -25,7 +25,7 @@
         }
         .header img {
             width: 50px; /* Ajusta el ancho de la imagen según tus preferencias */
-            height: auto;
+            height: 50px; /* Ajusta el alto de la imagen según tus preferencias */
             margin-right: 10px; /* Espacio entre la imagen y el texto */
         }
         .header h1 {
@@ -59,7 +59,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="https://play-lh.googleusercontent.com/p8n-LjuwErRjEWDJh53wEwL_jDccfmDMXB547j_qifRJ_VWf0ofZ33l7sOMvxZtO0w=w600-h300-pc0xffffff-pd">
+        <img src="logo.jpg">
         <h1>Covered Bonds Investor Presentation</h1>
     </div>
     <div id="passwordPrompt">
@@ -98,3 +98,4 @@
     </script>
 </body>
 </html>
+
