--- a/covered.html
+++ b/covered.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Covered Bonds Investor Presentation</title>
+    <!-- Agregar el enlace al favicon -->
+    <link rel="icon" type="image/x-icon" href="logo.ico">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -25,7 +27,7 @@
         }
         .header img {
             width: 50px; /* Ajusta el ancho de la imagen según tus preferencias */
-            height: 50px; /* Ajusta el alto de la imagen según tus preferencias */
+            height: auto;
             margin-right: 10px; /* Espacio entre la imagen y el texto */
         }
         .header h1 {
@@ -59,7 +61,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="logo.jpg">
+        <img src="https://play-lh.googleusercontent.com/p8n-LjuwErRjEWDJh53wEwL_jDccfmDMXB547j_qifRJ_VWf0ofZ33l7sOMvxZtO0w=w600-h300-pc0xffffff-pd">
         <h1>Covered Bonds Investor Presentation</h1>
     </div>
     <div id="passwordPrompt">
@@ -98,4 +100,3 @@
     </script>
 </body>
 </html>
-
