--- a/covered.html
+++ b/covered.html
@@ -3,7 +3,7 @@
 <head>
     <title>Covered Bonds Investor Presentation</title>
     <!-- Agregar el enlace al favicon -->
-    <link rel="icon" type="image/x-icon" href="logo.ico">
+    <link rel="icon" type="image/x-icon" href="logo.jpg">
     <style>
         body {
             font-family: Arial, sans-serif;
