--- a/covered.html
+++ b/covered.html
@@ -20,7 +20,7 @@
         .header {
             display: flex;
             align-items: center;
-            justify-content: space-between; /* Alinear los elementos en los extremos */
+            /* Alinear el contenido en el centro */
             background-color: #f2f2f2; /* Color de fondo gris claro */
             padding: 10px; /* Espacio alrededor del contenido */
             width: 100%; /* Ocupar todo el ancho disponible */
@@ -33,6 +33,7 @@
         .header h1 {
             font-size: 24px; /* Ajusta el tamaño del título según tus preferencias */
             margin: 0; /* Elimina el margen predeterminado del título */
+            /* Ajusta el tamaño del título según tus preferencias */
         }
         /* Estilos para el botón de tres rayas horizontales */
         .menu-button {
@@ -67,6 +68,20 @@
         .dropdown-content.active {
             display: block;
         }
+        /* Ajustar el tamaño del título "Abanca Corporativo Completo Quarter" */
+        .presentation-title {
+            font-size: 18px;
+            margin-top: 20px;
+            margin-bottom: 5px;
+        }
+        /* Estilos para el iframe */
+        #iframeContainer {
+            width: 100%; /* Ocupar todo el ancho disponible */
+        }
+        #iframeContainer iframe {
+            width: 100%; /* Ajustar el ancho del iframe al 100% del contenedor */
+            height: calc(100vh - 50px); /* Ajustar la altura para que ocupe toda la pantalla excepto la altura de la imagen del header */
+        }
     </style>
 </head>
 <body>
@@ -96,7 +111,7 @@
         </div>
     </div>
     <div id="iframeContainer" style="display: none;">
-        <h2>Abanca Corporativo Completo Quarter</h2>
+        <h2 class="presentation-title">Abanca Corporativo Completo Quarter</h2>
         <iframe title="Cover Pool Information"
                 src="https://app.powerbi.com/reportEmbed?reportId=81ee266a-2799-4577-bba8-8f96aa531bdf&autoAuth=true&ctid=2788b953-1971-4b82-9986-b668acbd5846"
                 frameborder="0"
