--- a/covered.html
+++ b/covered.html
@@ -20,7 +20,8 @@
         .header {
             display: flex;
             align-items: center;
-            /* Alinear el contenido en el centro */
+            justify-content: space-between; /* Alinear el contenido al extremo derecho e izquierdo */
+            /* Alinear el contenido en el centro verticalmente */
             background-color: #f2f2f2; /* Color de fondo gris claro */
             padding: 10px; /* Espacio alrededor del contenido */
             width: 100%; /* Ocupar todo el ancho disponible */
@@ -33,7 +34,8 @@
         .header h1 {
             font-size: 24px; /* Ajusta el tamaño del título según tus preferencias */
             margin: 0; /* Elimina el margen predeterminado del título */
-            /* Ajusta el tamaño del título según tus preferencias */
+            /* Centrar el título horizontalmente */
+            flex-grow: 1;
         }
         /* Estilos para el botón de tres rayas horizontales */
         .menu-button {
@@ -43,6 +45,7 @@
             width: 25px;
             height: 18px;
             cursor: pointer;
+            margin-right: 20px; /* Amplio margen a la derecha */
         }
         .menu-button span {
             width: 100%;
@@ -86,14 +89,14 @@
 </head>
 <body>
     <div class="header">
-        <img src="https://play-lh.googleusercontent.com/p8n-LjuwErRjEWDJh53wEwL_jDccfmDMXB547j_qifRJ_VWf0ofZ33l7sOMvxZtO0w=w600-h300-pc0xffffff-pd">
-        <h1>Covered Bonds Investor Presentation</h1>
-        <!-- Botón de tres rayas horizontales -->
         <div class="menu-button" onclick="toggleDropdown()">
+            <!-- Botón de tres rayas horizontales -->
             <span></span>
             <span></span>
             <span></span>
         </div>
+        <h1>Covered Bonds Investor Presentation</h1>
+        <img src="https://play-lh.googleusercontent.com/p8n-LjuwErRjEWDJh53wEwL_jDccfmDMXB547j_qifRJ_VWf0ofZ33l7sOMvxZtO0w=w600-h300-pc0xffffff-pd">
     </div>
     <!-- Desplegable -->
     <div class="dropdown-content" id="dropdownContent">
