--- a/covered.html
+++ b/covered.html
@@ -20,8 +20,7 @@
         .header {
             display: flex;
             align-items: center;
-            justify-content: space-between; /* Alinear el contenido al extremo derecho e izquierdo */
-            /* Alinear el contenido en el centro verticalmente */
+            justify-content: center; /* Centrar horizontalmente el contenido */
             background-color: #f2f2f2; /* Color de fondo gris claro */
             padding: 10px; /* Espacio alrededor del contenido */
             width: 100%; /* Ocupar todo el ancho disponible */
@@ -29,7 +28,7 @@
         .header img {
             width: 50px; /* Ajusta el ancho de la imagen según tus preferencias */
             height: auto;
-            margin-left: 20px; /* Espacio entre la imagen y el texto */
+            margin-right: 10px; /* Espacio entre la imagen y el texto */
         }
         .header h1 {
             font-size: 24px; /* Ajusta el tamaño del título según tus preferencias */
@@ -43,8 +42,8 @@
             width: 25px;
             height: 18px;
             cursor: pointer;
-            /* Amplio margen a la izquierda */
-            margin-right: 20px;
+            /* Amplio margen a la derecha */
+            margin-left: 10px;
         }
         .menu-button span {
             width: 100%;
@@ -74,11 +73,11 @@
         .presentation-title {
             font-size: 18px;
             margin-top: 20px;
-            margin-bottom: 20px;
+            margin-bottom: 5px;
         }
         /* Estilos para el iframe */
         #iframeContainer {
-            width: 95%; /* Ocupar todo el ancho disponible */
+            width: 100%; /* Ocupar todo el ancho disponible */
         }
         #iframeContainer iframe {
             width: 100%; /* Ajustar el ancho del iframe al 100% del contenedor */
@@ -143,6 +142,15 @@
             var dropdownContent = document.getElementById("dropdownContent");
             dropdownContent.classList.toggle("active");
         }
+
+        // Agregar evento de clic al documento para cerrar el desplegable cuando se hace clic en cualquier otro lugar
+        document.addEventListener("click", function(event) {
+            var dropdownContent = document.getElementById("dropdownContent");
+            var menuButton = document.querySelector(".menu-button");
+            if (event.target !== dropdownContent && event.target !== menuButton) {
+                dropdownContent.classList.remove("active");
+            }
+        });
     </script>
 </body>
 </html>
