--- a/covered.html
+++ b/covered.html
@@ -43,7 +43,7 @@
             height: 18px;
             cursor: pointer;
             /* Amplio margen a la derecha */
-            margin-left: 10px;
+            margin-right: 10px;
         }
         .menu-button span {
             width: 100%;
