--- a/covered.html
+++ b/covered.html
@@ -44,7 +44,7 @@
             height: 18px;
             cursor: pointer;
             /* Amplio margen a la derecha */
-            margin-left: 10px;
+            margin-right: 15px;
         }
         .menu-button span {
             width: 100%;
