--- a/covered.html
+++ b/covered.html
@@ -45,6 +45,7 @@
             cursor: pointer;
             /* Amplio margen a la derecha */
             margin-right: 15px;
+            margin-left: 60px;
         }
         .menu-button span {
             width: 100%;
