--- a/covered.html
+++ b/covered.html
@@ -38,7 +38,7 @@
         .menu-button {
             display: flex;
             flex-direction: column;
-            align-items: right;
+            position: absolute;
             justify-content: space-between;
             width: 25px;
             height: 18px;
