--- a/covered.html
+++ b/covered.html
@@ -139,8 +139,7 @@
             if (password === "Beka") {
                 document.getElementById("passwordPrompt").style.display = "none";
                 document.getElementById("menuButton").style.display = "block"; // Mostrar el botón de tres rayas horizontales
-                document.getElementById("dropdownContent").style.display = "block"; // Mostrar el desplegable
-                document.getElementById("quarterlyContainer").style.display = "block"; // Mostrar el contenido Quarterly por defecto
+                document.getElementById("dropdownContent").style.display = "block"; // Mostrar el desplegable Investor Presentations
                 passwordEntered = true; // Indicar que se ha introducido correctamente la contraseña
             } else {
                 alert("Incorrect password. Please try again.");
